
INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR})

add_library(DoSARAverageAtCPU SHARED DoSARAverageAtCPU.cpp ${CMAKE_SOURCE_DIR}/Matlabdef.def)
target_link_libraries(DoSARAverageAtCPU ${MATLAB_LIBRARIES})

if(WIN32)
  if (CMAKE_CL_64)
      SET_TARGET_PROPERTIES(DoSARAverageAtCPU PROPERTIES SUFFIX .mexw64)
  else(CMAKE_CL_64)
      SET_TARGET_PROPERTIES(DoSARAverageAtCPU PROPERTIES SUFFIX .mexw32)
  endif(CMAKE_CL_64)
else(WIN32)
  if (CMAKE_SIZEOF_VOID_P MATCHES "8")
      SET_TARGET_PROPERTIES(DoSARAverageAtCPU PROPERTIES SUFFIX .mexa64 PREFIX "")
  else(CMAKE_SIZEOF_VOID_P MATCHES "8")
      SET_TARGET_PROPERTIES(DoSARAverageAtCPU PROPERTIES SUFFIX .mexglx PREFIX "")
  endif (CMAKE_SIZEOF_VOID_P MATCHES "8")
endif(WIN32)

install(TARGETS DoSARAverageAtCPU DESTINATION ../bin)
